--- a/DAN_LV_Milan_Mitic/WpfPizza/WpfPizza.csproj
+++ b/DAN_LV_Milan_Mitic/WpfPizza/WpfPizza.csproj
@@ -54,8 +54,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Model\Ingreedient.cs" />
+    <Compile Include="Model\Pizza.cs" />
     <Compile Include="RelayCommand.cs" />
-    <Compile Include="Service.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="ViewModels\ViewModelBase.cs" />
     <Page Include="MainWindow.xaml">
